--- a/BabyInABag/Views/Home/Contact.cshtml
+++ b/BabyInABag/Views/Home/Contact.cshtml
@@ -11,10 +11,10 @@
                 <h2 class="w3-border-bottom w3-border-light-grey w3-padding-16">Contact</h2>
                 <p>If you have any question regarding our products. Please contact us</p>
                 <form target="_blank">
-                    <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name"><br />
-                    <input class="w3-input w3-section w3-border" type="text" placeholder="Email" required name="Email"><br />
-                    <input class="w3-input w3-section w3-border" type="text" placeholder="Subject" required name="Subject"><br />
-                    <textarea class="w3-input w3-section w3-border" type="text" placeholder="Comment" required name="Comment"></textarea><br />
+                    <input class="w3-input w3-border" Style = "width:70%;max-width:400px;" type="text" placeholder="Name" required name="Name"><br />
+                    <input class="w3-input w3-section w3-border" Style = "width:70%;max-width:400px;" type="text" placeholder="Email" required name="Email"><br />
+                    <input class="w3-input w3-section w3-border" Style = "width:70%;max-width:400px;" type="text" placeholder="Subject" required name="Subject"><br />
+                    <textarea class="w3-input w3-section w3-border" Style = "width:70%;max-width:400px;" type="text" placeholder="Comment" required name="Comment"></textarea><br />
                     <button class="w3-button w3-black w3-section" type="submit">
                         <i class="fa fa-paper-plane"></i> SEND MESSAGE
                     </button>
