--- a/BabyInABag/Views/Account/ForgotPassword.cshtml
+++ b/BabyInABag/Views/Account/ForgotPassword.cshtml
@@ -3,29 +3,30 @@
     ViewBag.Title = "Forgot your password?";
 }
 
-<h2>@ViewBag.Title.</h2>
+@*<h2>@ViewBag.Title.</h2>*@
 
 <main style="text-align:center">
     <section id="loginForm" class="section-first section-spacing">
         @using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
         {
             @Html.AntiForgeryToken()
-            <h4>Enter your email.</h4>
-            <hr />
+            <h3>Enter your Email</h3>
+            <hr style="max-width:500px;" />
             @Html.ValidationSummary("", new { @class = "text-danger" })
             <div class="form-group">
-                @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+                @*@Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })*@
                 <div>
-                    @Html.TextBoxFor(m => m.Email, new { @class = "w3-input w3-border" })
+                    @Html.TextBoxFor(m => m.Email, new { @class = "w3-input w3-border", Style = "width:70%;max-width:400px;", placeholder = "Email" })
                 </div>
             </div>
             <div class="form-group">
                 <div class="col-md-offset-2">
-                    <input type="submit" class="btn btn-default" value="Email Link" />
+                    <input type="submit" class="btn btn-dark" value="Email Link" />
                 </div>
             </div>
         }
-        </section>
+        <hr style="max-width:500px;" />
+    </section>
 </main>
 
 
