--- a/BabyInABag/Views/Cart/Cart.cshtml
+++ b/BabyInABag/Views/Cart/Cart.cshtml
@@ -1,11 +1,4 @@
-﻿
-@{
-    ViewBag.Title = "Cart";
-}
-
-<h2>Cart</h2>
-
-@using BabyInABag.Models
+﻿@using BabyInABag.Models
 @model IEnumerable<Product>
 @{
     ViewBag.Title = "Cart";
@@ -14,78 +7,74 @@
 <!-- FAQ Section -->
 <main>
     <div class="wrapper">
-        <section class="section-first section-spacing products">
 
-                <h2 class="w3-border-bottom w3-border-light-grey w3-padding-16">Shopping Cart</h2>
-            
-        </section>
-        @Html.ActionLink("Continue Shopping", "Products", "Products")
         @if (ViewBag.empty == null)
         {
+
+        <section class="section-first section-spacing products">
+            <h2 class="w3-border-bottom w3-border-light-grey w3-padding-16">Shopping Cart</h2>
+            @Html.ActionLink("Continue Shopping", "Products", "Products")
+        </section>
+            
+           
             <!--        product 1-->
             foreach (var item in Model)
             {
-        <div class="product-wrapper">
-            <div id="productDiv" class="w3-panel w3-border w3-round-xlarge" style="width: 70%">
+                <div class="product-wrapper">
+                    <div id="productDiv" class="w3-panel w3-border w3-round-xlarge" style="width: 70%">
 
-                <div class="w3-row">
+                        <div class="w3-row">
 
-                    <div class="w3-col w3-container m4 l3 ">
-                        <img id="image1" src="@item.Product_Image" alt="@item.Product_Image">
-                    </div>
-                    <div class="w3-col w3-container m8 l9">
-                        <h2>@Html.DisplayFor(modelItem => item.Product_Name)</h2>
+                            <div class="w3-col w3-container m4 l3 ">
+                                <img id="image1" src="@item.Product_Image" alt="@item.Product_Image">
+                            </div>
+                            <div class="w3-col w3-container m8 l9">
+                                <h2>@Html.DisplayFor(modelItem => item.Product_Name)</h2>
 
-                        <h4 class="details"><b>Details</b></h4>
-                        <div class="description">
-                            <p><b>Knit Type:</b> @Html.DisplayFor(modelItem => item.Knit_Type) </p>
-                            <p><b>Color:</b> @Html.DisplayFor(modelItem => item.Color) </p>
-                            <p><b>Quantity:</b> @Html.DisplayFor(modelItem => item.Quantity) </p>
-                            @if (item.AdditionalRequirements != null)
-                            {
-                                <p><b>Additional Requirements:</b> @Html.DisplayFor(modelItem => item.AdditionalRequirements) </p>
-                            }
+                                <h4 class="details"><b>Details</b></h4>
+                                <div class="description">
+                                    <p><b>Knit Type:</b> @Html.DisplayFor(modelItem => item.Knit_Type) </p>
+                                    <p><b>Color:</b> @Html.DisplayFor(modelItem => item.Color) </p>
+                                    <p><b>Quantity:</b> @Html.DisplayFor(modelItem => item.Quantity) </p>
+                                    @if (item.AdditionalRequirements != null)
+                                    {
+                                        <p><b>Additional Requirements:</b> @Html.DisplayFor(modelItem => item.AdditionalRequirements) </p>
+                                    }
+
+                                </div>
+                                <div id="pright">
+                                    <h4 id="cprice">$@Html.DisplayFor(modelItem => item.Product_Price)</h4>
+                                </div>
+
+                                <br />
+                                <button class="clear">@Html.ActionLink("Delete", "RemoveFromCart", "Cart", new { id = item.Product_Id }, new { style = "text-decoration:none;" })</button>
+                            </div>
 
                         </div>
-                        <div id="pright">
-                            <h4 id="cprice">$@Html.DisplayFor(modelItem => item.Product_Price)</h4>
-                        </div>
 
-                        <br />
-                        <button class="clear">@Html.ActionLink("Delete", "RemoveFromCart", "Cart", new { id = item.Product_Id }, new { style = "text-decoration:none;" })</button>
                     </div>
-
                 </div>
 
+            }
+            <div style="">
+                <p>@ViewBag.Subtotal</p>
             </div>
-        </div>
-                    
-                    }
-                    <div style="">
-                        <p>@ViewBag.Subtotal</p>
-                    </div>
-                    <div style="width:25%; text-align:center;float:right;">
-                        <button id="buttoncart">@Html.ActionLink("Check Out", "Checkout", "Orders", null, new { style = "text-decoration:none;" })</button>
-                    </div>
+            <div style="width:25%; text-align:center;float:right;">
+                <button id="buttoncart">@Html.ActionLink("Check Out", "Checkout", "Orders", null, new { style = "text-decoration:none;" })</button>
+            </div>
 
-                    }
-                    else
-                    {
-                    <h1 style="font-size: 150%">@ViewBag.empty</h1>
-                    }
+        }
+        else
+        {
+            <section class="section-first section-spacing products">
+                <div style="text-align:center;">
+                    <img src="~/images/upsidecart.jpg" style="height:30%; width:30%;" />
+                    <br/>
+                    <br/>
+                    <h1>Looks like there's nothing in here!</h1>
+                    <h4>Maybe you'll find something you like? @Html.ActionLink("Take a Look!", "Products", "Products")</h4>
                 </div>
+            </section>
+        }
+    </div>
 </main>
-@*<script>
-
-    //$(document).ready(function(){
-    //    $("#details").click(function(){
-    //        $("#description").toggle();
-    //    });
-
-    //});
-
-    $('.details').click(function (e) {
-        $(e.).toggle();
-    });
-
-</script>*@
