--- a/BabyInABag/Views/Colors/Create.cshtml
+++ b/BabyInABag/Views/Colors/Create.cshtml
@@ -8,51 +8,54 @@
 <div class="main-contents">
     <!-- Panel -->
     <div class="main">
+        <font size="4">
+            <h2 id="admin-header-text">ADD COLOR</h2>
+            <label id="admin-header-text" style="color:blue">@Html.ViewBag.psuccess</label>
+            <hr>
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
 
-        <h2>Create</h2>
 
-        @using (Html.BeginForm())
-        {
-            @Html.AntiForgeryToken()
-
-            <div class="form-horizontal">
-                <h4>Colors</h4>
-                <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Color_Name, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Color_Name, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Color_Name, "", new { @class = "text-danger" })
-                    </div>
-                </div>
+                <table align="center">
+                    <tr>
+                        <td>
+                            @Html.LabelFor(model => model.Color_Name, htmlAttributes: new { @class = "control-label col-md-2" })
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Color_HEX, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Color_HEX, new { htmlAttributes = new { @class = "form-control", id="color" } })
-                        @Html.ValidationMessageFor(model => model.Color_HEX, "", new { @class = "text-danger" })
-                    </div>
-                </div>
+                            @Html.EditorFor(model => model.Color_Name, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Color_Name, "", new { @class = "text-danger" })
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            @Html.LabelFor(model => model.Color_HEX, htmlAttributes: new { @class = "control-label col-md-2" })
+                            &nbsp;
+                            @Html.EditorFor(model => model.Color_HEX, new { htmlAttributes = new { @class = "form-control", type = "color", value = "#ff0000" } })
 
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Create" class="btn btn-default" />
-                    </div>
-                </div>
+                            @Html.ValidationMessageFor(model => model.Color_HEX, "", new { @class = "text-danger" })
+<td>
+                    </tr>
+
+                    <tr>
+                        <td>
+
+
+
+                            <input type="submit" value="Create" class="btn btn-default" />
+                        </td>
+                    </tr>
+                </table>
+        
+    }
+
+            <div>
+                @Html.ActionLink("Back to List", "Index")
             </div>
-        }
-
-        <div>
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-
+            </font>
         </div>
     </div>
 
-<script type="text/javascript" charset="utf-8">
-  $(document).ready(function() {
-    //$('#demo').hide();
-    $('#picker').farbtastic('#color');
-  });
-</script>
+
+       
+
