--- a/BabyInABag/Views/Colors/Delete.cshtml
+++ b/BabyInABag/Views/Colors/Delete.cshtml
@@ -9,41 +9,52 @@
     <!-- Panel -->
     <div class="main">
 
-        <h2>Delete</h2>
+        <h2 id="admin-header-text">DELETE</h2>
 
-        <h3>Are you sure you want to delete this?</h3>
+        <h3 id="admin-header-text">Are you sure you want to delete this?</h3>
+
+
+        <font size="4">
+            <table align="center">
+                <tr>
+                    <td>
+                        @Html.DisplayNameFor(model => model.Color_Name)
+
+                        @Html.DisplayFor(model => model.Color_Name)
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        @Html.DisplayNameFor(model => model.Color_HEX)
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        @Html.DisplayFor(model => model.Color_HEX)
+                    </td>
+                </tr>
+                <tr>
+                    <td style="text-align:center;">
+
+                        @using (Html.BeginForm())
+                        {
+                            @Html.AntiForgeryToken()
+
+
+                            <input type="submit" value="Delete" class="btn btn-default" /> 
+               
+
+                                                                          
+                        }   
+
+                    </td>
+                </tr>
+            </table>
+        </font>
+
         <div>
-            <h4>Colors</h4>
-            <hr />
-            <dl class="dl-horizontal">
-                <dt>
-                    @Html.DisplayNameFor(model => model.Color_Name)
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.Color_Name)
-                </dd>
-
-                <dt>
-                    @Html.DisplayNameFor(model => model.Color_HEX)
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.Color_HEX)
-                </dd>
-
-            </dl>
-
-            @using (Html.BeginForm())
-            {
-                @Html.AntiForgeryToken()
-
-                <div class="form-actions no-color">
-                    <input type="submit" value="Delete" class="btn btn-default" /> |
-                    @Html.ActionLink("Back to List", "Index")
-                </div>
-            }
+            @Html.ActionLink("Back to List", "Index")
         </div>
 
-</div>
+    </div>
 </div>
