--- a/BabyInABag/Views/Colors/Edit.cshtml
+++ b/BabyInABag/Views/Colors/Edit.cshtml
@@ -9,45 +9,47 @@
     <!-- Panel -->
     <div class="main">
 
-        <h2>Edit</h2>
+
 
         @using (Html.BeginForm())
         {
             @Html.AntiForgeryToken()
 
-            <div class="form-horizontal">
-                <h4>Colors</h4>
-                <hr />
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                @Html.HiddenFor(model => model.Color_Id)
+            <h2 id="admin-header-text" style="border-bottom-color: black">Edit Color</h2>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Color_Name, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Color_Name, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Color_Name, "", new { @class = "text-danger" })
-                    </div>
-                </div>
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            @Html.HiddenFor(model => model.Color_Id)
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Color_HEX, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Color_HEX, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Color_HEX, "", new { @class = "text-danger" })
-                    </div>
-                </div>
+            <font size="4">
+                <table align="center">
+                    <tr>
+                        <td>
+                            @Html.LabelFor(model => model.Color_Name, htmlAttributes: new { @class = "control-label col-md-2" })
 
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Save" class="btn btn-default" />
-                    </div>
-                </div>
-            </div>
+                            @Html.EditorFor(model => model.Color_Name, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Color_Name, "", new { @class = "text-danger" })
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            @Html.LabelFor(model => model.Color_HEX, htmlAttributes: new { @class = "control-label col-md-2" })
+                            @Html.EditorFor(model => model.Color_HEX, new { htmlAttributes = new { @class = "form-control", type = "color", value = Model.Color_HEX } })
+                            @Html.ValidationMessageFor(model => model.Color_HEX, "", new { @class = "text-danger" })
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="text-align:center;">
+                            <input type="submit" value="Save" class="btn btn-default" />
+                        </td>
+                    </tr>
+                </table>
+            </font>
+
         }
 
         <div>
             @Html.ActionLink("Back to List", "Index")
         </div>
 
-</div>
+    </div>
 </div>
