--- a/BabyInABag/Views/Shared/_Layout.cshtml
+++ b/BabyInABag/Views/Shared/_Layout.cshtml
@@ -175,11 +175,11 @@
     </header>
 
 
-    <div class="container body-content">
+    @*<div class="container body-content">*@
         @RenderBody()
         
 
-    </div>
+    @*</div>*@
 
     <footer>
         <div class="wrapper">
