--- a/BabyInABag/Styles/style.css
+++ b/BabyInABag/Styles/style.css
@@ -184,7 +184,7 @@ span.field-validation-error {
 }
 
 .dropdown:hover .dropbtn {
-    background-color: #3e8e41;
+    background-color: #007bff;
 }
 
 
@@ -221,7 +221,7 @@ body {
     background-color: #2f353a;
     overflow-x: hidden;
     padding-top: 0px;
-    margin-top: 110px;
+    margin-top: 100px;
 }
 
     .sidenav a {
@@ -237,7 +237,7 @@ body {
         }
 
 .main {
-    margin-top: 130px;
+    margin-top: 120px;
     margin-left: 30px;
     margin-right: 30px;
     font-size: 28px; /* Increased text to enable scrolling */
@@ -349,11 +349,6 @@ body {
 .dropdown:hover .dropdown-content {
     display: block;
 }
-
-.dropdown:hover .dropbtn {
-    background-color: #3e8e41;
-}
-
 
 
 /*Main template*/
@@ -2169,6 +2164,7 @@ a {
     font-size: 38px;
     font-family: Oswald;
     letter-spacing: -2px;
+    margin: 5px 0px;
 }
 
 * {
