--- a/BabyInABag/Views/Products/Products.cshtml
+++ b/BabyInABag/Views/Products/Products.cshtml
@@ -9,82 +9,84 @@
 
 <!-- product Section -->
 <main>
-    <section class="section-first section-spacing products">
-        @*<div class="w3-container w3-padding-32" id="contact" style="text-align:center;">*@
-        <div class="sub-section-spacing">
-            <h3 style="text-align: center">Want to make your own?</h3>
-            <div class="product-wrapper">
-                <button id="buttoncustomize" data-toggle="modal" data-target=".bootstrapmodal">Create Custom Product</button>
-            </div>
-            <div class="modal fade bootstrapmodal">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h2 style="text-align:center;">Select a Product to Customize</h2>
-                        </div>
-                        <div class="modal-body" style="text-align:center;">
-                            @foreach (var item in ViewBag.data)
-                            {
-                                String name = item.Product_Category;
-                                <button id="modalbutton">@Html.ActionLink(name, "CustomizeProduct", "Products", new { id = item.Product_Category_Id }, new { style = "text-decoration:none; color:white;" })</button>
-                            }
+    <div class="wrapper container">
+        <section class="section-first section-spacing products">
+            @*<div class="w3-container w3-padding-32" id="contact" style="text-align:center;">*@
+            <div class="sub-section-spacing">
+                <h3 style="text-align: center">Want to make your own?</h3>
+                <div class="product-wrapper">
+                    <button id="buttoncustomize" data-toggle="modal" data-target=".bootstrapmodal">Create Custom Product</button>
+                </div>
+                <div class="modal fade bootstrapmodal">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h2 style="text-align:center;">Select a Product to Customize</h2>
+                            </div>
+                            <div class="modal-body" style="text-align:center;">
+                                @foreach (var item in ViewBag.data)
+                                {
+                                    String name = item.Product_Category;
+                                    <button id="modalbutton">@Html.ActionLink(name, "CustomizeProduct", "Products", new { id = item.Product_Category_Id }, new { style = "text-decoration:none; color:white;" })</button>
+                                }
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
 
 
-    @foreach (var item in ViewBag.data)
-    {
-        if (item.Active == true)
+        @foreach (var item in ViewBag.data)
         {
-            <section class="section-spacing products">
-                <h1>@item.Product_Category</h1>
-                @foreach (var item2 in Model)
-                {
-                    if (item2.Active == true)
+            if (item.Active == true)
+            {
+                <section class="section-spacing products">
+                    <h1>@item.Product_Category</h1>
+                    @foreach (var item2 in Model)
                     {
-                        if (item.Product_Category_Id == item2.Product_Category_Id)
+                        if (item2.Active == true)
                         {
-                            using (Html.BeginForm("AddToCart", "Products", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                            if (item.Product_Category_Id == item2.Product_Category_Id)
                             {
-                                @Html.AntiForgeryToken()
-                                <div class="product-wrapper">
-                                    <div id="productDiv" class="w3-panel w3-border w3-round-xlarge">
+                                using (Html.BeginForm("AddToCart", "Products", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                                {
+                                    @Html.AntiForgeryToken()
+                                    <div class="product-wrapper">
+                                        <div id="productDiv" class="w3-panel w3-border w3-round-xlarge">
 
-                                        <div class="w3-row">
-                                            <div class="w3-col w3-container m4 l3 ">
-                                                <img id="image1" src="@item2.Product_Image" alt="@item2.Product_Image">
-                                            </div>
-                                            <div class="w3-col w3-container m8">
-                                                <h2>@Html.DisplayFor(modelItem => item2.Product_Name)</h2>
-                                                <p>@Html.DisplayFor(modelItem => item2.Product_Description)</p>
-                                                <div id="pright">
-                                                    <h4 id="cprice">CAD @Html.DisplayFor(modelItem => item2.Product_Price)</h4>
+                                            <div class="w3-row">
+                                                <div class="w3-col w3-container m4 l3 ">
+                                                    <img id="image1" src="@item2.Product_Image" alt="@item2.Product_Image">
                                                 </div>
+                                                <div class="w3-col w3-container m8">
+                                                    <h2>@Html.DisplayFor(modelItem => item2.Product_Name)</h2>
+                                                    <p>@Html.DisplayFor(modelItem => item2.Product_Description)</p>
+                                                    <div id="pright">
+                                                        <h4 id="cprice">CAD @Html.DisplayFor(modelItem => item2.Product_Price)</h4>
+                                                    </div>
 
-                                                <h4>Quantity</h4>
-                                                <input name="pid" value="@item2.Product_Id" type="hidden" />
-                                                <select name="quantity">
-                                                    <option value="1">1</option>
-                                                    <option value="2">2</option>
-                                                    <option value="3">3</option>
-                                                </select>
+                                                    <h4>Quantity</h4>
+                                                    <input name="pid" value="@item2.Product_Id" type="hidden" />
+                                                    <select name="quantity">
+                                                        <option value="1">1</option>
+                                                        <option value="2">2</option>
+                                                        <option value="3">3</option>
+                                                    </select>
 
-                                                <input type="submit" value="Add To Cart" id="buttoncart" />
+                                                    <input type="submit" value="Add To Cart" id="buttoncart" />
 
+                                                </div>
                                             </div>
                                         </div>
-                                    </div>
 
-                                </div>
+                                    </div>
+                                }
                             }
                         }
                     }
-                }
-            </section>
+                </section>
+            }
         }
-    }
-    </main>
+    </div>
+</main>
