--- a/BabyInABag/Views/Shared/_AdminLayout.cshtml
+++ b/BabyInABag/Views/Shared/_AdminLayout.cshtml
@@ -6,16 +6,13 @@
     <link rel="stylesheet" href="~/Styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet'>
-    <script src="~/Scripts/farbtastic.js"></script>
-    <link href="~/Styles/farbtastic.css" rel="stylesheet" />
-    <script src="~/Scripts/jquery-3.3.1.js"></script>
 </head>
 
 <body class="admin-body">
     <!-- Header -->
     <div class="admin-top" style="background-color:gray;">
         <div class="w3-bar w3-white w3-wide w3-padding w3-card" style="min-width: 640px;height:100px">
-            <h1 class="w3-bar-item" id="header-text">Baby In A Bag Management</h1>
+            <div class="w3-bar-item" id="header-text">Baby In A Bag Management</div>
             <div id="navbar" style="width:100%; min-width: 752px; position:absolute; bottom:0;" align="center"></div>
             <div id="topright">
                 <div class="w3-right w3-hide-small">
