--- a/BabyInABag/Views/Shared/_AdminLayout.cshtml
+++ b/BabyInABag/Views/Shared/_AdminLayout.cshtml
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="~/Styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet'>
+    <script src="~/Scripts/farbtastic.js"></script>
+    <link href="~/Styles/farbtastic.css" rel="stylesheet" />
+    <script src="~/Scripts/jquery-3.3.1.js"></script>
 </head>
 
 <body class="admin-body">
@@ -51,7 +54,7 @@
     </div>
 
     <script>
-/* Loop through all dropdown buttons to toggle between hiding and showing its dropdown content - This allows the user to have multiple dropdowns without any conflict */
+        /* Loop through all dropdown buttons to toggle between hiding and showing its dropdown content - This allows the user to have multiple dropdowns without any conflict */
         var dropdown = document.getElementsByClassName("dropdown-btn");
         var i;
 
@@ -75,6 +78,7 @@
                 $('#message').html('Password Not Matching').css('color', 'red');
         });
     </script>
+    
 </body>
 </html>
 
