--- a/BabyInABag/Views/Orders/Checkout.cshtml
+++ b/BabyInABag/Views/Orders/Checkout.cshtml
@@ -18,7 +18,7 @@
            
         }
 
-    <div style="width:50%; float:left;">
+    <div style="width:50%; float:left; margin:2%;">
         <!--        product 1-->
         @foreach (var item in Model)
         {
@@ -42,19 +42,20 @@
         }
     </div>
         
-    <div style="width:45%;float:right;padding-top:2%; padding-left:2px;padding-left:2px;margin-top:2%;">
+    <div id="Right_Box" style="width:40%;height:100%;float:left;margin-top:2%; margin-left:1%;">
 
-        <h5 style="font-size:22px; padding-left:10%;"><b>Total</b></h5>
-        <hr  style="width:80%"/>
-
-        <div style="width:100%;">
-            <h5 style="font-size:18px;padding-left:10%;width:40%;float:left;"><b>Sub-Total</b></h5>
-            <h5 style="font-size:15px;padding-right:10%;width:40%;float:left;">@ViewBag.Subtotal</h5>
+        <div id="Total_Bar" style="width:100%;">
+            <h5 style="font-size:22px;padding-left:10%;"><b>Total</b></h5>
+            <hr style="width:80%" />
+        </div>
+        <div style="width:80%;padding-left:10%;">
+           <b style="font-size:18px;width:50%;float:left;">Sub-Total</b>
+            <b style="font-size:15px;width:50%;float:right;text-align:right;">@ViewBag.Subtotal</b>
         </div>
 
         
 
-        <div>
+        <div id="buttonbox" style="text-align:center;width:100%;">
             <form action="@ConfigurationManager.AppSettings["urlSubmitPayment"]">
                 <input type="hidden" name="cmd" value="_cart" />
                 <input type="hidden" name="upload" value="1" />
@@ -69,10 +70,10 @@
                     i++;
 
                 }
-                <div>
-                    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                    <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="4" height="4">
-                </div>
+                    <div style="width:100%;text-align:center;">
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="4" height="4">
+                    </div>
             </form>
         </div>
     </div>
