--- a/BabyInABag/Views/Cart/Cart.cshtml
+++ b/BabyInABag/Views/Cart/Cart.cshtml
@@ -18,7 +18,7 @@
 
 
             <!--        product 1-->
-            foreach (var item in Model)
+            @foreach (var item in Model)
             {
             <div class="product-wrapper">
                 <div id="productDiv" class="w3-panel w3-border w3-round-xlarge" style="width: 70%">
