--- a/BabyInABag/Views/Manage/ChangePassword.cshtml
+++ b/BabyInABag/Views/Manage/ChangePassword.cshtml
@@ -2,39 +2,100 @@
 @{
     ViewBag.Title = "Change Password";
 }
-
-<h2>@ViewBag.Title.</h2>
-
-@using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+@if (this.User.IsInRole("Admin"))
 {
-    @Html.AntiForgeryToken()
-    <h4>Change Password Form</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.OldPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
+
+    <div class="main-contents">
+        <!-- Panel -->
+        <div class="main">
+            <h2 id="admin-header-text" style="border-bottom-color: black">Change Password</h2>
+            <div class="container" style=" text-align:center;font-size: 20px;">
+              
+
+                @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                {
+                    @Html.AntiForgeryToken()
+                    <h4>Change Password Form</h4>
+                    <hr />
+                    @Html.ValidationSummary("", new { @class = "text-danger" })
+                    <div class="form-group">
+                        @*@Html.LabelFor(m => m.OldPassword, new { @class = "col-md-2 control-label" })*@
+                        <div class="col-md-10">
+                            @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control", placeholder = "Old Password" })
+                        </div>
+                    </div>
+                    <BR />
+                    <div class="form-group">
+                        @*@Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 control-label" })*@
+                        <div class="col-md-10">
+                            @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control", placeholder = "New Password" })
+                        </div>
+                    </div>
+                    <BR />
+                    <div class="form-group">
+                        @*@Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })*@
+                        <div class="col-md-10">
+                            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", placeholder = "Confirm Password" })
+                        </div>
+                    </div>
+                    <br />
+                    <div class="form-group">
+                        <div class="col-md-offset-2 col-md-10">
+                            <input type="submit" value="Change password" class="btn btn-default" />
+                        </div>
+                    </div>
+                }
+            </div>
         </div>
     </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Change password" class="btn btn-default" />
-        </div>
-    </div>
+
+
 }
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
+@*if ends*@
+else
+{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+
+    <section id="loginForm" class="section-first section-spacing products">
+        <h2>@ViewBag.Title.</h2>
+
+        @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+        {
+            @Html.AntiForgeryToken()
+            <h4>Change Password Form</h4>
+            <hr />
+            @Html.ValidationSummary("", new { @class = "text-danger" })
+            <div class="form-group">
+                @Html.LabelFor(m => m.OldPassword, new { @class = "col-md-2 control-label" })
+                <div class="col-md-10">
+                    @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 control-label" })
+                <div class="col-md-10">
+                    @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
+                <div class="col-md-10">
+                    @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Change password" class="btn btn-default" />
+                </div>
+            </div>
+        }
+    </section>
+    @*@section Scripts {
+            @Scripts.Render("~/bundles/jqueryval")
+        }*@
+
 }
+@*else end*@
+
+
