--- a/BabyInABag/Styles/styleContent.css
+++ b/BabyInABag/Styles/styleContent.css
@@ -66,7 +66,7 @@
 
 .testimonial-info {
     background-color: white;
-    /* margin: 5px; */
+    margin: 5px 0px; 
     padding: 5px;
     width: 300px;
     display: inline-block;
@@ -74,6 +74,7 @@
 
     .testimonial-info img {
         width: 100%;
+        height: 200px;
     }
 
 /*Products*/
