--- a/BabyInABag/Views/Cart/Cart.cshtml
+++ b/BabyInABag/Views/Cart/Cart.cshtml
@@ -18,7 +18,7 @@
 
 
             <!--        product 1-->
-            foreach (var item in Model)
+            @foreach (var item in Model)
             {
             <div class="product-wrapper">
                 <div id="productDiv" class="w3-panel w3-border w3-round-xlarge" style="width: 70%">
@@ -59,7 +59,8 @@
             <div style="">
                 <p>@ViewBag.Subtotal</p>
             </div>
-            <div style="width:25%; text-align:center;float:left;">
+            <br />
+            <div style="width:25%; text-align:center;">
                 <button id="buttoncart">@Html.ActionLink("Check Out", "Checkout", "Orders", null, new { style = "text-decoration:none;" })</button>
             </div>
         </section>
