Checkout Total UI

--- a/BabyInABag/Views/Home/Index.cshtml
+++ b/BabyInABag/Views/Home/Index.cshtml
@@ -42,7 +42,7 @@
                 <div class="testimonial-info">
                     <img src="https://i.imgur.com/veAEeAB.jpg" alt="Testimonial Image" />
                     <p>Jeff Rothchild</p>
-                    <p>"My baby is looking cute in it!"</p>
+                    <p>"My baby is looking cute in it! I love it!"</p>
                 </div>
 
                 <div class="testimonial-info">
@@ -61,7 +61,7 @@
 
                     <img src="https://i.imgur.com/b5PxlsX.png" alt="Testimonial Image" />
                     <p>Mathew Yeboah</p>
-                    <p>"Nice and easy to use!"</p>
+                    <p>"Nice and easy to use! This is a good buy!"</p>
                 </div>
             </div>
         </section>
